Fix text alignment on tiles

--- a/src/styles/ProjectTile.module.scss
+++ b/src/styles/ProjectTile.module.scss
@@ -8,6 +8,7 @@
     min-width: 200px;
     max-width: 600px;
     overflow: hidden;
+    text-align: left;
 
     .content {
         display: flex;
